--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ html,body {
 #delete{
 
 	background-color:white;
-    margin-top:-15px;
+	margin-top:-15px;
 
 }
 .pop_up {
@@ -174,20 +174,20 @@ html,body {
 	height:100%;
 }
 .liste{
-       list-style-type: none;
+	list-style-type: none;
 }
 .onglet2{
-    background:white;margin-left: 1%;margin-right: 1%;
-    height: 60%;
+	background:white;margin-left: 1%;margin-right: 1%;
+	height: 60%;
 }
 .onglet1{
-    background:white;margin-left: 1%;margin-right: 1%;
+	background:white;margin-left: 1%;margin-right: 1%;
 }
 .filtres{
-    color:black
+	color:black
 }
 .filtres_cont{
-    margin-top:20px
+	margin-top:20px
 }
 .vitesse{
 	height: 100%;
@@ -197,34 +197,34 @@ html,body {
 	margin-bottom: auto;
 }
 .time{
-	 height: 40px;
-	 font-family: "Bebas";
-	 color: #004080;
-	 text-shadow: 1px 1px #ffffff;
+	height: 40px;
+	font-family: "Bebas";
+	color: #004080;
+	text-shadow: 1px 1px #ffffff;
 }
 .timer_number_titles
-		{
-			height: 10px;
-			color: #ffffff;
-			font-size: 9px;
-			text-shadow: 1px 1px #ffffff;
-		}
-		
+{
+	height: 10px;
+	color: #ffffff;
+	font-size: 9px;
+	text-shadow: 1px 1px #ffffff;
+}
+
 .timer_number_days, .timer_number_hours, .timer_number_mins
-		{
-			float: left;
-			margin-left: 40px;
-		}
-		
+{
+	float: left;
+	margin-left: 40px;
+}
+
 .timer_number_hours
-		{
-			margin-left: 21px;
-		}
-		
+{
+	margin-left: 21px;
+}
+
 .timer_number_mins
-		{
-			margin-left: 21px;
-		}
+{
+	margin-left: 21px;
+}
 
 #boussole{
 	height: 150px;
@@ -773,42 +773,42 @@ a, a:visited {
 /*            Onglet             */
 /*-------------------------------*/
 
-.onglet-btn {
-	background: white;
-	margin-left:3%;
-	margin-top: 25px;
-        width: 45%;
-    
+.onglet
+{
+	margin-top: 30px;
+	display:inline-block;
+	margin-left:5%;
+	padding:3px;
+	cursor:pointer;
+	color: black;
+	font-weight: bold;
+	font-size: 1.2em;
+	width: 40%;
+	line-height: 50px;
+	text-align: center;
+}
+.onglet_0
+{
+	background:#BDC0BF;
+}
+.onglet_1
+{
+	background:white;
+	padding-bottom:4px;
+}
+.contenu_onglet
+{
+	background-color:white;
+	margin:-1 3px;
+	padding:5px;
+	display:none;
 }
 
-.onglet1-img {
-	width: 40px;
+.ligne
+{
+	border-top: 4px solid #004080;
+	margin-top: -6px;
 }
-
-.onglet2-img {
-	width: 100px;
-}
-
-.is-open {
-	display: block;
-}
-
-.is-closed {
-	display: none;
-}
-
-.onglet1 {
-	margin-top: 15px;
-}
-
-.onglet2 {
-	margin-top: -50px;
-    
-
-}
-
-
-
 
 
 /*-------------------------------*/
@@ -818,258 +818,258 @@ a, a:visited {
 
 /*New*/
 
-		.timer-background
-		{
-			width: 400px;
-			height: 234px;
-			padding-left: 36px;
-			padding-top: 66px;
-			margin-left: auto;
-			margin-right: auto;
-		}
-		
-		.timer-body
-		{
-			height: 170px;
-			width: 400px;
-			border: 1px solid #979797;
-			
-			box-shadow:0px 0px 20px #979797;
-			border-radius: 5px;
-		}
-		
-		.timer-top
-		{
-			height: 41px;
-			border-bottom: 1px solid #dedede;
-		}
-		
-		.timer-middle
-		{
-			height: 86px;
-			border-bottom: 1px solid #dedede;
-		}
-		
-		.timer-bottom
-		{
-			height: 45px;
-			height: 40px;
-			background-color: #eeeeee;
-			border-top: 1px solid #ffffff;
-			border-radius: 0px 0px 5px 5px;
-		}
-		
+.timer-background
+{
+	width: 400px;
+	height: 234px;
+	padding-left: 36px;
+	padding-top: 66px;
+	margin-left: auto;
+	margin-right: auto;
+}
 
-		
-		.timer-title
-		{
-			width: 146px;
-			height: 29px;
-			float: left;
-			color: #7e97ab;
-			font-size: 14px;
-			font-weight: 600;
-			padding-top: 12px;
-			padding-right: 13px;
-			text-align: right;
-		}
-		
-		.timer-controls
-		{
-			width: 159px;
-			height: 86px;
-			float: left;
-		}
-		
-		.timer-numbers-block
-		{
-			width: 159px;
-			height: 86px;
-			float: left;
-		}
-		
-		.timer-current-title
-		{
-			width: 144px;
-			height: 27px;
-			float: left;
-			font-size: 13px;
-			padding-left: 15px;
-			padding-top: 13px;
-			color: #666;
-		}
-		
-		.timer-current-time
-		{
-			width: 144px;
-			height: 27px;
-			font-size: 13px;
-			float: left;
-			padding-top: 13px;
-			padding-right: 15px;
-			text-align: right;
-			color: #666;
-		}
-		
+.timer-body
+{
+	height: 170px;
+	width: 400px;
+	border: 1px solid #979797;
 
-		
-		.gem:hover
-		{
-			color: #495259;
-			background-color: #aab4b9;
-			border-color: #878b90;
-		}
-		
-		.gem-red
-		{
-			
-			margin-left: 15px;
-		}
-		
-				
-		
-		.control-outer
-		{
-			height: 40px;
-			width: 40px;
-			background-color: #e6e6e6;
-			border-radius: 23px;
-			margin-top: 19px;
-			float: left;
-			box-shadow: inset 0px 1px 1px #d1d1d1, inset 0px -3px 3px #ffffff;
-			padding-left: 6px;
-			padding-top: 6px;
-			color: #3c4349;
-		}
-		
-		.control-inner
-		{
-			width: 33px;
-			height: 33px;
-			border-radius: 16.5px;
-			box-shadow: inset 0px 1px 2px #ffffff, inset 0px -1px 2px #aaaaaa;
-			background: #ffffff; /* Old browsers */
-			background: -moz-linear-gradient(top, #ffffff 0%, #e2e2e2 100%); /* FF3.6+ */
-			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e2e2e2)); /* Chrome,Safari4+ */
-			background: -webkit-linear-gradient(top, #ffffff 0%,#e2e2e2 100%); /* Chrome10+,Safari5.1+ */
-			background: -o-linear-gradient(top, #ffffff 0%,#e2e2e2 100%); /* Opera 11.10+ */
-			background: -ms-linear-gradient(top, #ffffff 0%,#e2e2e2 100%); /* IE10+ */
-			background: linear-gradient(to bottom, #ffffff 0%,#e2e2e2 100%); /* W3C */
-			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e2e2e2',GradientType=0 ); /* IE6-9 */
-		}
-		
-		.control-icon
-		{
-			padding-top: 10px;
-			font-size: 15px;
-			text-align: center;
-		}
-		
-		.play-control-outer
-		{
-			margin-left: 16px;
-			cursor: pointer;
-		}
-		
-		.stop-control-outer
-		{
-			margin-left: -7px;
-			cursor: pointer;
-		}
+	box-shadow:0px 0px 20px #979797;
+	border-radius: 5px;
+}
 
-		.reset-control-outer
-		{
-			margin-left: -7px;
-			cursor: pointer;
-		}
-		
-		.play-control-outer:hover
-		{
-			color: #7e97ab;
-			text-shadow: inset 0px -1px 1px #333333;
-		}
-		
-		.stop-control-outer:hover
-		{
-			color: #ffffff;
-			text-shadow: inset 0px -1px 1px #333333;
-		}
-		
-		.reset-control-outer:hover
-		{
-			color: #ffffff;
-			text-shadow: inset 0px -1px 1px #333333;
-		}
-		
-		.timer_numbers
-		{
-			font-weight: 300;
-			font-size: 32px;
-			color: #666666;
-			margin-top: 20px;
-			margin-left: 20px;
-			font-family: "HelveticaNeue-Light", Helvetica, Arial, sans-serif;
-		}
-		
-		.timer_number_titles
-		{
-			color: #666666;
-			font-size: 9px;	
-			font-weight: 300;
-			text-transform: uppercase;
-		}
-		
-		.timer_number_hour, .timer_number_min, .timer_number_sec
-		{
-			float: left;
-			margin-left: 24px;
-		}
-		
-		.timer_number_min
-		{
-			margin-left: 27px;
-		}
-		
-		.timer_number_sec
-		{
-			margin-left: 34px;
-		}
-		
-		.attributes
-		{
-			border-radius: 5px;			
-			background: #ffffff; /* Old browsers */
-			background: -moz-linear-gradient(top, #ffffff 0%, #e2e2e2 100%); /* FF3.6+ */
-			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e2e2e2)); /* Chrome,Safari4+ */
-			background: -webkit-linear-gradient(top, #ffffff 0%,#e2e2e2 100%); /* Chrome10+,Safari5.1+ */
-			background: -o-linear-gradient(top, #ffffff 0%,#e2e2e2 100%); /* Opera 11.10+ */
-			background: -ms-linear-gradient(top, #ffffff 0%,#e2e2e2 100%); /* IE10+ */
-			background: linear-gradient(to bottom, #ffffff 0%,#e2e2e2 100%); /* W3C */
-			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e2e2e2',GradientType=0 ); /* IE6-9 */
-			
-			box-shadow: inset 0px 1px 2px #ffffff, inset 0px -1px 2px #aaaaaa;
-			width: 280px;
-			padding: 10px;
-			margin-left: 36px;
-			font-size: 12px;
-			color: #666;
-			margin-left: auto;
-			margin-right: auto;
-		}
-		
-		a
-		{
-			color:#7e97ab;
-			text-decoration: none;
-		}
-		
-		a:hover
-		{
-			text-decoration: underline;
-			color: #ffffff;
-		}
-		
-		a:visited
-		{
-			color: #ffffff;
-		}
+.timer-top
+{
+	height: 41px;
+	border-bottom: 1px solid #dedede;
+}
+
+.timer-middle
+{
+	height: 86px;
+	border-bottom: 1px solid #dedede;
+}
+
+.timer-bottom
+{
+	height: 45px;
+	height: 40px;
+	background-color: #eeeeee;
+	border-top: 1px solid #ffffff;
+	border-radius: 0px 0px 5px 5px;
+}
+
+
+
+.timer-title
+{
+	width: 146px;
+	height: 29px;
+	float: left;
+	color: #7e97ab;
+	font-size: 14px;
+	font-weight: 600;
+	padding-top: 12px;
+	padding-right: 13px;
+	text-align: right;
+}
+
+.timer-controls
+{
+	width: 159px;
+	height: 86px;
+	float: left;
+}
+
+.timer-numbers-block
+{
+	width: 159px;
+	height: 86px;
+	float: left;
+}
+
+.timer-current-title
+{
+	width: 144px;
+	height: 27px;
+	float: left;
+	font-size: 13px;
+	padding-left: 15px;
+	padding-top: 13px;
+	color: #666;
+}
+
+.timer-current-time
+{
+	width: 144px;
+	height: 27px;
+	font-size: 13px;
+	float: left;
+	padding-top: 13px;
+	padding-right: 15px;
+	text-align: right;
+	color: #666;
+}
+
+
+
+.gem:hover
+{
+	color: #495259;
+	background-color: #aab4b9;
+	border-color: #878b90;
+}
+
+.gem-red
+{
+
+	margin-left: 15px;
+}
+
+
+
+.control-outer
+{
+	height: 40px;
+	width: 40px;
+	background-color: #e6e6e6;
+	border-radius: 23px;
+	margin-top: 19px;
+	float: left;
+	box-shadow: inset 0px 1px 1px #d1d1d1, inset 0px -3px 3px #ffffff;
+	padding-left: 6px;
+	padding-top: 6px;
+	color: #3c4349;
+}
+
+.control-inner
+{
+	width: 33px;
+	height: 33px;
+	border-radius: 16.5px;
+	box-shadow: inset 0px 1px 2px #ffffff, inset 0px -1px 2px #aaaaaa;
+	background: #ffffff; /* Old browsers */
+	background: -moz-linear-gradient(top, #ffffff 0%, #e2e2e2 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e2e2e2)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #ffffff 0%,#e2e2e2 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #ffffff 0%,#e2e2e2 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #ffffff 0%,#e2e2e2 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #ffffff 0%,#e2e2e2 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e2e2e2',GradientType=0 ); /* IE6-9 */
+}
+
+.control-icon
+{
+	padding-top: 10px;
+	font-size: 15px;
+	text-align: center;
+}
+
+.play-control-outer
+{
+	margin-left: 16px;
+	cursor: pointer;
+}
+
+.stop-control-outer
+{
+	margin-left: -7px;
+	cursor: pointer;
+}
+
+.reset-control-outer
+{
+	margin-left: -7px;
+	cursor: pointer;
+}
+
+.play-control-outer:hover
+{
+	color: #7e97ab;
+	text-shadow: inset 0px -1px 1px #333333;
+}
+
+.stop-control-outer:hover
+{
+	color: #ffffff;
+	text-shadow: inset 0px -1px 1px #333333;
+}
+
+.reset-control-outer:hover
+{
+	color: #ffffff;
+	text-shadow: inset 0px -1px 1px #333333;
+}
+
+.timer_numbers
+{
+	font-weight: 300;
+	font-size: 32px;
+	color: #666666;
+	margin-top: 20px;
+	margin-left: 20px;
+	font-family: "HelveticaNeue-Light", Helvetica, Arial, sans-serif;
+}
+
+.timer_number_titles
+{
+	color: #666666;
+	font-size: 9px;	
+	font-weight: 300;
+	text-transform: uppercase;
+}
+
+.timer_number_hour, .timer_number_min, .timer_number_sec
+{
+	float: left;
+	margin-left: 24px;
+}
+
+.timer_number_min
+{
+	margin-left: 27px;
+}
+
+.timer_number_sec
+{
+	margin-left: 34px;
+}
+
+.attributes
+{
+	border-radius: 5px;			
+	background: #ffffff; /* Old browsers */
+	background: -moz-linear-gradient(top, #ffffff 0%, #e2e2e2 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e2e2e2)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #ffffff 0%,#e2e2e2 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #ffffff 0%,#e2e2e2 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #ffffff 0%,#e2e2e2 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #ffffff 0%,#e2e2e2 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e2e2e2',GradientType=0 ); /* IE6-9 */
+
+	box-shadow: inset 0px 1px 2px #ffffff, inset 0px -1px 2px #aaaaaa;
+	width: 280px;
+	padding: 10px;
+	margin-left: 36px;
+	font-size: 12px;
+	color: #666;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+a
+{
+	color:#7e97ab;
+	text-decoration: none;
+}
+
+a:hover
+{
+	text-decoration: underline;
+	color: #ffffff;
+}
+
+a:visited
+{
+	color: #ffffff;
+}
