--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,15 @@ html,body {
 	margin: 0;
 	padding: 0;
 }
+
+.simulation {
+	z-index: 1000;
+	position: absolute;
+	padding: 5%;
+	bottom:0;
+	right:20px;
+	background-color: transparent;
+}
 @keyframes animation {
 	from {opacity: 0.5;}
 	50% {opacity: 1;}
@@ -150,15 +159,14 @@ html,body {
 	font-size: 20px;
 	background: #216996;
 	padding: 10px 20px 10px 20px;
-	border: solid #1f628d 2px;
+	border: solid #1f628d 2px 2px 0px 2px;
 	text-decoration: none;
-	margin: 1%;
 	display: inline-block;
 
 
 }
 .big_btn {
-	z-index: 1000;
+	z-index: 500;
 	position: absolute;
 	bottom: 10px;
 	width: 20%;
@@ -688,14 +696,13 @@ a, a:visited {
 
 .formula {
 	display: block;
-	color: white;
-	margin: 0 0 8px;
-	font-family: sans-serif;
-	background-color: #004080;  
+	color: black;
+	margin: 0 auto 8px auto;
+	font-family: sans-serif; 
 	padding: 8px;
 	font-size: 1.2em;
-	width: 100%;
-	margin-bottom: 30px;
+	width: 80%;
+	margin-bottom: 10px;
 
 }
 #editVitesse{
@@ -730,7 +737,6 @@ a, a:visited {
 
 	font-family: sans-serif;
 	color: black;
-	padding:16px;
 	text-align:center;
 	display:block;
 	margin:10px;
@@ -752,20 +758,21 @@ a, a:visited {
 
 }
 .pop_up {
-	z-index: 1000;
+	z-index: 2000;
 	border-radius: 10px;
 	background-color:white;
-	width: 40%;
+	width: 90%;
 	border: solid #ffffff 1px;
 	min-height: 30%;
 	max-height: auto;
-	margin-top: 10%;
+	margin-top: 2%;
+
 	margin-left: 10%;
-	-moz-box-shadow: 6px 6px 6px 1px #656565;
-	-webkit-box-shadow: 6px 6px 6px 1px #656565;
-	-o-box-shadow: 6px 6px 6px 1px #656565;
-	box-shadow: 6px 6px 6px 1px #656565;
-	filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=135, Strength=6);
+	-moz-box-shadow: 6px 6px 6px 1px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 6px 6px 6px 1px rgba(0,0,0,0.1);
+	-o-box-shadow: 6px 6px 6px 1px rgba(0,0,0,0.1);
+	box-shadow: 6px 6px 6px 1px rgba(0,0,0,0.1);
+	filter:progid:DXImageTransform.Microsoft.Shadow(color=rgba(0,0,0,0.1), Direction=135, Strength=6);
 }
 
 
@@ -806,7 +813,6 @@ a, a:visited {
 
 .ligne
 {
-	border-top: 4px solid #004080;
 	margin-top: -6px;
 }
 
@@ -833,6 +839,7 @@ a, a:visited {
 .active
 {
 	background: #004080;
+	border:0px 0px 1px 0px solid;
 }
 
 /*-------------------------------*/
