--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,18 @@ html,body {
 	padding: 0;
 	font-family: Arial;
 }
+.fin {
+	z-index: 1000;
+	position: absolute;
+	background-color: rgba(255,255,255,0.9);
+	text-align: center;
+	width: 60%;
+	
+	min-height: 60%;
+	margin-top: 10%;
+	margin-left: 10%;
+	display: none;
+}
 #map {
 	width: 100%;
 	height: 100%;
@@ -108,13 +120,14 @@ html,body {
 .pop_up {
 	z-index: 1000;
 	
-	background-color: rgba(255,255,255,0.9);
+	background-color: rgba(255,255,255,0.5);
 	width: 80%;
 	
 	min-height: 60%;
 	margin-top: 10%;
 	margin-left: 10%;
 }
+
 .pop {
 	height: 100%;
 	z-index: 1000;
