--- a/css/style.css
+++ b/css/style.css
@@ -561,7 +561,7 @@ a, a:visited {
 	background: #e74c3c;
 	height: 44px;
 	width: 44px;
-	top: -67px;
+	top: -41px;
 	left: 148.5px;
 	position: relative;
 
@@ -597,7 +597,7 @@ a, a:visited {
 	background: #27ae60;
 	height: 44px;
 	width: 44px;
-	top: -25px;
+	top: 3px;
 	left: 18.5px;
 	position: relative;
 
@@ -1176,4 +1176,28 @@ a:visited
 
 h1 {
 	margin-bottom: 70px;
+}
+
+.margebatiment{
+	margin-left: 35px;
+}
+
+.margepolygone{
+	margin-left: 2px;
+}
+
+.margepolyline{
+	margin-left: 19px;
+}
+
+.margecercle{
+	margin-left: 14px;
+}
+
+.margetexte{
+	margin-left: 15px;
+}
+
+p.blast{
+
 }
