--- a/css/style.css
+++ b/css/style.css
@@ -681,7 +681,7 @@ a, a:visited {
 	transform: rotate(42deg);
 }
 
-.oeilvert{
+.oeilvert {
 
 	width:30px;
 	height:20px;
@@ -692,7 +692,7 @@ a, a:visited {
 	border-style: solid;
 	border-width: 2px;
 
-	left: 95px;
+	left: 85px;
 	top: -4px;
 
 }
@@ -701,7 +701,7 @@ a, a:visited {
 
 
 
-.yeux{
+.yeux {
 	width: 16px;
 	height: 16px;
 	border-radius: 12px;
@@ -716,10 +716,10 @@ a, a:visited {
 	top: 1px;
 }
 
-.rouge{
+.rouge {
 	background: red
 }
-.vert{
+.vert {
 	background:green;
 	color : green;
 }
@@ -1295,15 +1295,19 @@ h1 {
 }
 
 .margebatiment{
-	margin-left: 35px;
+	margin-left: 9px;
 }
 
 .margepolygone{
 	margin-left: 2px;
 }
 
+.margepolygone2{
+	margin-left: 4px;
+}
+
 .margepolyline{
-	margin-left: 19px;
+	margin-left: 2px;
 }
 
 .margecercle{
@@ -1313,6 +1317,7 @@ h1 {
 .margetexte{
 	margin-left: 15px;
 }
+
 
 p.blast{
 
