--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -34,13 +34,13 @@ main .helper {
   font-size: 3em;
   font-weight: bold;
         }
-        #newDiv{
+#newDiv{
             overflow:hidden;
         } 
 #loadDiv{
             
   
-     text-align: center;
+  text-align: center;
   border-radius: 20px;
   font-size: 3em;
   font-weight: bold;
@@ -355,6 +355,25 @@ a {
   color: #202020;
 }
 
+.btn {
+  webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0px;
+    color: #ffffff;
+    font-size: 20px;
+    background: #216996;
+    padding: 10px 20px 10px 20px;
+    border: solid #1f628d 2px 2px 0px 2px;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.btn:hover {
+  background: #1d64ab;
+  text-decoration: none;
+}
+
+
 .resource--article, .resource--book, .resource--talks, .resource--add {
   position: relative;
   background-color: #fff;
@@ -362,7 +381,7 @@ a {
   margin: 0 auto;
   list-style-type: none;
   padding: .5rem 1.75rem 3rem;
-  border-top: 15px solid #2406a2;
+  border-top: 15px solid #216996;
   margin-bottom: 1.75rem;
   border-radius: 5px;
   -webkit-transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
@@ -420,7 +439,6 @@ a {
   color: #868686;
   line-height: 1.5;
  font-size: 50%;
-  margin-bottom: 2em;
 }
 
 .resource--article__author, .resource--book__author, .resource--book__publisher, .resource--talks__author {
