Centrage du titre de l'Index

--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -25,6 +25,7 @@ main .helper {
   background: rgba(0, 0, 0, 0);
   color: #ffffff;
   
+  margin-left: 10%;
   top: 50%;
   left: 40%;
   transform: translate3d(-50%, -50%, 0);
