Affichage sauvegarde et Fix bouton Admin/Simulation

--- a/css/style.css
+++ b/css/style.css
@@ -246,21 +246,7 @@ text-decoration: none;
 	text-align: center;
 	padding: 2%;
 }
-.btn {
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
-	border-radius: 0px;
 
-	color: #ffffff;
-	font-size: 20px;
-	background: #216996;
-	padding: 10px 20px 10px 20px;
-	border: solid #1f628d 2px 2px 0px 2px;
-	text-decoration: none;
-	display: inline-block;
-
-
-}
 .big_btn {
 	z-index: 500;
 	position: absolute;
@@ -587,7 +573,6 @@ a, a:visited {
 	transition: all .3s ease-in-out;
 	-moz-transition: all .3s ease-in-out;
 	-webkit-transition: all .3s ease-in-out;
-	border-right:4px solid #fff;
 }
 
 .boutonvert{
@@ -834,14 +819,51 @@ a, a:visited {
 
 .btn {
 	font-family: Arial;
+	background: #004080;
+	text-decoration: none;
+	border-radius: 0px;
 	color: #ffffff;
 	font-size: 20px;
-	background: #004080;
-	/*  padding: 6px 18px 9px 20px;*/
-	text-decoration: none;
+	padding: 10px 20px 10px 20px;
+	border: solid #1f628d 2px 2px 0px 2px;
+	display: inline-block;
 }
 
 .btn:hover {
+	background: #1d64ab;
+	text-decoration: none;
+}
+
+.btn_simulation {
+	font-family: Arial;
+	background: #BDC0BF;
+	text-decoration: none;
+	border-radius: 0px;
+	color: #ffffff;
+	font-size: 20px;
+	padding: 10px 20px 10px 20px;
+	border: solid #1f628d 2px 2px 0px 2px;
+	display: inline-block;
+}
+
+.btn_simulation:hover {
+	background: #1d64ab;
+	text-decoration: none;
+}
+
+.btn_admin {
+	font-family: Arial;
+	background: #BDC0BF;
+	text-decoration: none;
+	border-radius: 0px;
+	color: #ffffff;
+	font-size: 20px;
+	padding: 10px 20px 10px 20px;
+	border: solid #1f628d 2px 2px 0px 2px;
+	display: inline-block;
+}
+
+.btn_admin:hover {
 	background: #1d64ab;
 	text-decoration: none;
 }
@@ -1009,10 +1031,11 @@ a, a:visited {
 
 .save
 {
+	margin-left: 28%;
 	background-color: #004080;
 	border: none;
 	width: 110px;
-	height: 30px;
+	height: 35px;
 	font-size: 1em;
 	color: white;
 }
