Changement couleur de base bouton Admin/Simulation

--- a/css/style.css
+++ b/css/style.css
@@ -836,7 +836,7 @@ a, a:visited {
 
 .btn_simulation {
 	font-family: Arial;
-	background: #BDC0BF;
+	background: #868FC9;
 	text-decoration: none;
 	border-radius: 0px;
 	color: #ffffff;
@@ -853,7 +853,7 @@ a, a:visited {
 
 .btn_admin {
 	font-family: Arial;
-	background: #BDC0BF;
+	background: #868FC9;
 	text-decoration: none;
 	border-radius: 0px;
 	color: #ffffff;
