alignement timer et br form bateaux

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,9 @@ text-decoration: none;
 
 #timer{
 	font-size:180%;
+	position: relative;
+	top: 50px;
+	right: 130px;
 
 
 }
@@ -862,7 +865,7 @@ a, a:visited {
 	color: white;
 	margin: 0 0 8px;
 	font-family: sans-serif;
-	background-color: #004080;  
+	background-color: #004080;
 	padding: 8px;
 	font-size: 1.2em;
 	width: 80%;
@@ -871,6 +874,8 @@ a, a:visited {
 	margin-left: 10%;
 	margin-right: 10%;
 	border-radius: 10px;
+	position: relative;
+	left: 145px;
 
 }
 .pop_up {
