--- a/css/style.css
+++ b/css/style.css
@@ -186,11 +186,22 @@ text-decoration: none;
 #timer{
 	font-size:180%;
 	position: relative;
-	top: 50px;
+	top: -210px;
 	right: 130px;
 
 
 }
+
+.timer{
+	position:relative;
+	top:120px;
+}
+
+#timerbtn{
+	position:relative;
+	top: -140px;
+}
+
 #delete{
 
 	background-color:white;
@@ -253,7 +264,7 @@ text-decoration: none;
 .big_btn {
 	z-index: 500;
 	position: absolute;
-	bottom: 10px;
+	bottom: -120px;
 	width: 20%;
 	left:30%;
 	min-height: 30px;
@@ -879,6 +890,7 @@ a, a:visited {
 	border-radius: 10px;
 	position: relative;
 	left: 145px;
+	top: -260px;
 
 }
 .pop_up {
@@ -1250,6 +1262,8 @@ a, a:visited {
 	font-size: 9px;	
 	font-weight: 300;
 	text-transform: uppercase;
+	position: relative;
+	top: -210px;
 }
 
 .timer_number_hour, .timer_number_min, .timer_number_sec
