debug clickable port/phare

--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,13 @@ text-decoration: none;
 .profondeur{
     pointer-events: none;
 }
+.port{
+    pointer-events: none;
+}
+.phare{
+    pointer-events: none;
+
+}
 
 .stop{
 	position: absolute;
