--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html,body {
 	margin: 0;
 	padding: 0;
 	font-family: Arial;
+    overflow:hidden;
 }
 
 /*-------------------------------*/
@@ -387,6 +388,7 @@ body.sidebar-show {
 .menu-stripes,
 .content {
 	transition: transform .5s ease-in-out;
+    overflow-x: hidden;
 }
 
 .content {
