--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 
+
 html,body {
 	width: 100%;
 	height: 100%;
 	margin: 0;
 	padding: 0;
 	font-family: Arial;
-    overflow:hidden;
+    overflow: hidden;
+    position:relative; 
 }
 
 /*-------------------------------*/
@@ -102,6 +104,8 @@ html,body {
 	height: 100%;
 	display: inline-block;
 	vertical-align: top;
+        overflow: hidden;
+    position:relative; 
 
 }
 .settings {
@@ -153,7 +157,6 @@ html,body {
 
 .simulation {
 	z-index: 1000;
-	position: absolute;
 	padding: 5%;
 	bottom:0;
 	right:20px;
@@ -283,6 +286,7 @@ text-decoration: none;
 	text-align: center;
 	border-radius: 10px;
 	margin-left:10%;
+/*    -ms-touch-action: none !important; */
 }
 #cont{
 	width: 200px;
@@ -388,7 +392,7 @@ body.sidebar-show {
 .menu-stripes,
 .content {
 	transition: transform .5s ease-in-out;
-    overflow-x: hidden;
+    overflow-x: auto;
 }
 
 .content {
@@ -1009,6 +1013,11 @@ input[type="range"]::-webkit-slider-thumb {
 	margin-bottom: 0;
 }
 
+.filtres{
+    padding-top: 30px;
+}
+
+
 .ligne
 {
 	margin-top: -6px;
@@ -1081,6 +1090,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 .save
 {
+    margin-top:3px;
 	margin-left: 28%;
 	background-color: #004080;
 	border: none;
@@ -1404,4 +1414,16 @@ p.blast{
 	right:-100px;
 }
 
+/*MediaQueries*/
+
+@media screen and (min-width: 0px) and (max-width: 1200px) {
+    .filtres_title{color:pink}
+    .filtres{padding-top: 10px;}
+    .bouton{margin-bottom: 5px}
+    h3{margin-bottom:3px}
+    .save{margin-top: 3px;}
+    .onglet{margin-top: 5px}
+}
+
+/*fin mediaqueries*/
 
