--- a/css/style.css
+++ b/css/style.css
@@ -146,13 +146,13 @@ html,body {
 	padding: 0;
 }
 .pop_up_inv2 {
-	height: 100%;
+	height: 50%;
+	padding: 25% 15% 25% 15%;
 	z-index: 1000;
 	position: absolute;
-	width: 100%;
+	width: 70%;
 	background-color: rgba(0,0,0,0.2);
 	margin: 0;
-	padding: 0;
 }
 
 .simulation {
@@ -216,9 +216,9 @@ text-decoration: none;
 	z-index: 1000;
 	
 	background-color: rgba(255,255,255,0.5);
-	width: 80%;
+	width: 100%;
 	
-	min-height: 60%;
+	min-height: 100%;
 	margin-top: 10%;
 	margin-left: 10%;
 }
