--- a/css/style.css
+++ b/css/style.css
@@ -138,12 +138,13 @@ html,body {
 	display: inline-block;
 }
 .pop_up_inv {
-	height: 100%;
-	z-index: 2000;
+	height: 50%;
+	padding: 5% 15% 45% 15%;
+	z-index: 1000;
 	position: absolute;
-	width: 80%;
+	width: 70%;
+	background-color: rgba(0,0,0,0.2);
 	margin: 0;
-	padding: 0;
 }
 .pop_up_inv2 {
 	height: 50%;
