--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ text-decoration: none;
 }
 .pop_up {
 	z-index: 1000;
-	
+	padding-bottom: 5%;
 	background-color: rgba(255,255,255,0.5);
 	width: 100%;
 	min-height: 100%;
