--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -704,4 +704,9 @@ a{
 .gif{
   margin: 2%;
 }
+
+  #tutoDiv{
+    z-index:1000;
+    position:relative;
+  }
          body{background:#283848!important}
