Ajout de MediaQuery pour Screen > 1200px

--- a/css/style.css
+++ b/css/style.css
@@ -1420,12 +1420,18 @@ p.blast{
 
 /*MediaQueries*/
 
+/* SMALL SCREEN QUERY */
 @media screen and (min-width: 0px) and (max-width: 1200px) {
     .filtres{padding-top: 10px;}
     .bouton{margin-bottom: 5px}
     h3{margin-bottom:3px}
     .save{margin-top: 3px;}
     .onglet{margin-top: 5px}
+}
+
+/* TV SCREEN QUERY */
+@media screen and (min-width: 1200px){
+	.sidebar-btn {top : 90%;};
 }
 
 /*fin mediaqueries*/
