--- a/css/style.css
+++ b/css/style.css
@@ -346,9 +346,9 @@ text-decoration: none;
 	height: 150px;
 	z-index: 1000;
 	position: absolute;
-	bottom: 1.5%;
+	bottom: .5%;
 	width: 150px;
-	left:85%;
+	left: .5%;
 	text-align: center;
 
 }
