Fix des modifications pour le salon (toolbar + bouttons zoom + MediaQueries)

--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -479,6 +479,7 @@
 	}
 
 /* Media Query */
+/*
 @media screen and (min-width: 1200px){
 	.leaflet-top {
 		top: inherit;
@@ -491,3 +492,4 @@
 
 	};
 }
+*/
